--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -145,14 +145,14 @@ blockquote {
   border-left: 4px solid $border-color-01;
   padding-left: $spacing-unit * .5;
   @include relative-font-size(1.125);
-  font-style: italic;
+  font-style: normal;
 
   > :last-child {
     margin-bottom: 0;
   }
 
   i, em {
-    font-style: normal;
+    font-style: italic;
   }
 }
 
@@ -163,11 +163,11 @@ blockquote {
  */
 pre,
 code {
-  font-family: $code-font-family;
+  font-family: 'Times New Roman', Times, serif;
   font-size: 0.9375em;
   border: 1px solid $border-color-01;
   border-radius: 3px;
-  background-color: $code-background-color;
+  background-color: #555552;
 }
 
 code {
@@ -187,11 +187,11 @@ pre {
 
 .highlight {
   border-radius: 3px;
-  background: $code-background-color;
+  background: rgb(15, 15, 66);
   @extend %vertical-rhythm;
 
   .highlighter-rouge & {
-    background: $code-background-color;
+    background: yellow;
   }
 }
 
