--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -32,7 +32,7 @@
   position: absolute;
   top: 9px;
   right: $spacing-unit * .5;
-  background-color: #B8860B;
+  background-color: $background-color;
   border: 1px solid $border-color-01;
   border-radius: 5px;
   text-align: right;
@@ -74,7 +74,7 @@
   }
 
   .page-link {
-    color: rgb(127, 137, 141);
+    color: $text-color;
     line-height: $base-line-height;
     display: block;
     padding: 5px 10px;
